--- a/src/components/iod-ia_case-study_info-left.njk
+++ b/src/components/iod-ia_case-study_info-left.njk
@@ -2,7 +2,7 @@
 
     <div class="case-study-grid-set">
 
-        <h3 class="paragraph-xxl"><span class="span-large">COMPONENT & CONTENT FOCUSED</span>Less focus on large, ellaborate navigations, more focus on presenting the right IoD content upfront, through well designed, robust components.</h3>
+        <h3 class="paragraph-xxl"><span class="span-large">COMPONENT FOCUSED</span>Less focus on large navigations. More focus presenting relevant content upfront through robust, well-designed components.</h3>
 
             <picture class="body-image">
                 <source media="(min-width: 1200px)" srcset="./images/projects/iod/4-0-ia@1x.png 1x, ./images/projects/iod/4-0-ia@2x.png 2x">
@@ -29,67 +29,6 @@
                     <img src="./images/projects/iod/4-6-ia@1x.png">
                 </picture>
 
-            <!-- <picture class="body-image">
-                <source media="(min-width: 1200px)" srcset="./images/projects/iod/4-5-ia@1x.png 1x, ./images/projects/iod/4-5-ia@2x.png 2x">
-                <img src="./images/projects/iod/4-5-ia@1x.png">
-            </picture> -->
-
     </div>
-
-    {# <div class="case-study-grid-set">
-
-        <div class="paragraph-position positioning-one">
-            <div class="sticky-boy">
-                <p class="paragraph-xl"><span class="span-large">MOBILE NAV</span>Something about mobile nav.</p>
-            </div>
-        </div>
-
-
-        <div class="side-image-container">
-
-            <picture class="side-image">
-                <source media="(min-width: 1200px)" srcset="./images/projects/mergo/earn-landing@2x.png">
-                <img src="./images/projects/mergo/earn-landing@2x.png">
-            </picture>
-
-            <picture class="side-image">
-                <source media="(min-width: 1200px)" srcset="./images/projects/mergo/earn-landing@2x.png">
-                <img src="./images/projects/mergo/earn-landing@2x.png">
-            </picture>
-
-            <picture class="side-image">
-                <source media="(min-width: 1200px)" srcset="./images/projects/mergo/earn-landing@2x.png">
-                <img src="./images/projects/mergo/earn-landing@2x.png">
-            </picture>
-
-        </div>
-
-    </div> #}
-
-    {# <div class="case-study-grid-set">
-
-        <div class="paragraph-position positioning-two">
-            <div class="sticky-boy">
-                <p class="paragraph-xl"><span class="span-large">SECONDARY NAV</span>Something about secondary nav.</p>
-            </div>
-        </div>
-
-        <div class="side-image-container">
-            <picture class="side-image">
-                <source media="(min-width: 1200px)" srcset="./images/projects/mergo/earn-landing@2x.png">
-                <img src="./images/projects/mergo/earn-landing@2x.png">
-            </picture>
-        </div>
-
-    </div>
-
-    <div class="case-study-grid-set">
-
-        <picture class="body-image">
-            <source media="(min-width: 1200px)" srcset="./images/projects/iod/4-6-ia@1x.png 1x, ./images/projects/iod/4-6-ia@2x.png 2x">
-                <img src="./images/projects/iod/4-6-ia@1x.png">
-        </picture>
-
-    </div> #}
 
 </div>
