--- a/src/components/iod-my-account_case-study_info-right.njk
+++ b/src/components/iod-my-account_case-study_info-right.njk
@@ -2,11 +2,11 @@
 
     <div class="case-study-grid-set">
 
-        <h3 class="paragraph-xxl"><span class="span-large">MY ACCOUNT</span>A focus on utility allowing busy directors with multiple board roles to keep their details current, manage their payments, bookings and opt-in to different benefits, so IoD can provide the best service possible.</h3>
+        <h3 class="paragraph-xxl"><span class="span-large">MY ACCOUNT</span>Utility focused for busy directors to keep their details current, opt-in to IoD benefits & manage payments & bookings easy.</h3>
 
         <div class="paragraph-position positioning-one">
             <div class="sticky-boy">
-                <p class="paragraph-xl"><span class="span-large">MY PROFILE DASHBOARD</span>A consolidated way-finding dashboard with all a directors most important and actionable info in one place.</p>
+                <p class="paragraph-xl"><span class="span-large">MY PROFILE</span>A way-finding dashboard displaying the most actionable info in one place, so directors save time for more important things.</p>
             </div>
         </div>
 
@@ -37,7 +37,7 @@
 
         <div class="paragraph-position positioning-two">
             <div class="sticky-boy">
-                <p class="paragraph-xl"><span class="span-large">CPD DASHBOARD</span>Allocate, update and track CPD activity to stay up-to-date and continue being the thought leaders within New Zealand governance.</p>
+                <p class="paragraph-xl"><span class="span-large">CPD DASHBOARD</span>Allocate, update & track <a href="https://www.iod.org.nz/membership/cpd/cpd-points/#" target="_blank">CPD activity</a> to stay on top of governance & continue being the thought leaders of New Zealand.</p>
             </div>
         </div>
 
@@ -67,16 +67,26 @@
 
         <div class="paragraph-position positioning-three">
             <div class="sticky-boy">
-                <p class="paragraph-xl"><span class="span-large">PREFERENCES</span>Members can customise what is presented to them on the site, &amp; emails to better suit their roles & interests within governance.</p>
+                <p class="paragraph-xl"><span class="span-large">PREFERENCES</span>Members can customise their profile for a more tailored experience suitting their governance roles & interests.</p>
             </div>
         </div>
 
         <div class="side-image-container">
 
-            <picture class="side-image">
-                <source media="(min-width: 1200px)" srcset="./images/projects/iod/3-4-my-account@1x.png 1x, ./images/projects/iod/3-4-my-account@2x.png 2x">
-                <img src="./images/projects/iod/3-4-my-account@1x.png">
-            </picture>
+        <picture class="side-image">
+            <source media="(min-width: 1200px)" srcset="./images/projects/iod/3-6-join@1x.png 1x, ./images/projects/iod/3-6-join@2x.png 2x">
+            <img src="./images/projects/iod/3-6-join@1x.png">
+        </picture>
+
+        <picture class="side-image">
+            <source media="(min-width: 1200px)" srcset="./images/projects/iod/3-4-my-account@1x.png 1x, ./images/projects/iod/3-4-my-account@2x.png 2x">
+            <img src="./images/projects/iod/3-4-my-account@1x.png">
+        </picture>
+
+        <picture class="side-image">
+            <source media="(min-width: 1200px)" srcset="./images/projects/iod/3-6-my-account@1x.png 1x, ./images/projects/iod/3-6-my-account@2x.png 2x">
+            <img src="./images/projects/iod/3-6-my-account@1x.png">
+        </picture>
 
         </div>
 
@@ -108,25 +118,6 @@
         </picture>
 
         </div>
-
-    </div> #}
-
-    {# <div class="case-study-grid-set">
-
-        <picture class="body-image">
-            <source media="(min-width: 1200px)" srcset="./images/projects/iod/3-7-join@1x.png 1x, ./images/projects/iod/3-7-join@2x.png 2x">
-            <img src="./images/projects/iod/3-7-join@1x.png">
-        </picture>
-
-        <picture class="body-image">
-            <source media="(min-width: 1200px)" srcset="./images/projects/iod/3-8-join@1x.png 1x, ./images/projects/iod/3-8-join@2x.png 2x">
-            <img src="./images/projects/iod/3-8-join@1x.png">
-        </picture>
-
-        <picture class="body-image">
-            <source media="(min-width: 1200px)" srcset="./images/projects/iod/3-9-join@1x.png 1x, ./images/projects/iod/3-9-join@2x.png 2x">
-            <img src="./images/projects/iod/3-9-join@1x.png">
-        </picture>
 
     </div> #}
 
