--- a/src/components/iod-visual-brand_case-study_info-right.njk
+++ b/src/components/iod-visual-brand_case-study_info-right.njk
@@ -2,11 +2,11 @@
 
     <div class="case-study-grid-set">
 
-        <h3 class="paragraph-xxl"><span class="span-large">GOING 2020 DIGITAL</span>We collaborated with the agency spear-heading IoD’s new brand to develop &amp; intergrate with their evolving digital experiences simulaneously, to bring IoD into the now.</h3>
+        <h3 class="paragraph-xxl"><span class="span-large">GOING 2020 DIGITAL</span>Translating IoD's new visual-identity into a digital experience deserving of the year it's in.</h3>
 
         <div class="paragraph-position positioning-one">
             <div class="sticky-boy">
-                <p class="paragraph-xl"><span class="span-large">VISUAL STYLE</span>Best in class but not snobby, brave but not too confident, connected but not insincere.</p>
+                <p class="paragraph-xl"><span class="span-large">VISUAL STYLE</span>Best in class, not snobby. Brave, not too confident. Connected, not insincere.</p>
             </div>
         </div>
 
@@ -23,7 +23,7 @@
 
         <div class="paragraph-position positioning-two">
             <div class="sticky-boy">
-                <p class="paragraph-xl"><span class="span-large">TYPOGRAPHY</span>Untitled-Serif for it’s connection to New Zealand and editorial aesthetic. Untitled-Sans as the two fonts just belong together.</p>
+                <p class="paragraph-xl"><span class="span-large">TYPOGRAPHY</span>Untitled-Serif for it’s connection to New Zealand & editorial aesthetic. Untitled-Sans because the two fonts belong together, literally.</p>
             </div>
         </div>
 
@@ -40,7 +40,7 @@
 
         <div class="paragraph-position positioning-three">
             <div class="sticky-boy">
-                <p class="paragraph-xl"><span class="span-large">EXTENDED PALETTE</span>We extended IoD’s new colour palette, giving each colour, 9 other tones. This allowed us to design with more naunce and dynamism.</p>
+                <p class="paragraph-xl"><span class="span-large">EXTENDED PALETTE</span>We extended IoD’s colour palette, giving each colour, 9 tones allowing us to design with more naunce.</p>
             </div>
         </div>
 
