--- a/src/components/mercury-discovery_case-study_app_info-right.njk
+++ b/src/components/mercury-discovery_case-study_app_info-right.njk
@@ -2,11 +2,12 @@
 
     <div class="case-study-grid-set">
 
-        <h3 class="paragraph-xxl"><span class="span-large">ONBOARDING</span>Helping customers explore &amp; discover the app, so they can do the important things faster.</h3>
+        <h3 class="paragraph-xxl"><span class="span-large">ONBOARDING</span>Empowering customers to explore & discover, so they can do all the important things faster.</h3>
 
         <div class="paragraph-position positioning-one">
             <div class="sticky-boy">
-                <p class="paragraph-x"><span class="span-large">LOGIN SCREENS</span>Customer or not, get the bigger picture &amp; see what Mercury Go has to offer, before needing to login.</p>
+                <p class="paragraph-x"><span class="span-large">LOGIN SCREENS</span>Customer or not, get the bigger picture & see what Mercury Go has to offer.</p>
+                {# <p class="paragraph-x"><span class="span-large">LOGIN SCREENS</span>Customer or not, get the bigger picture &amp; see what Mercury Go has to offer, before needing to login.</p> #}
             </div>
         </div>
 
@@ -29,7 +30,7 @@
 
         <div class="paragraph-position positioning-two">
             <div class="sticky-boy">
-                <p class="paragraph-xl"><span class="span-large">DISCOVERY HELPERS</span>To help a customers discovery of Mercury Go &amp; it's key functionality, "Discovery Helpers" are placed throughout.</p>
+                <p class="paragraph-xl"><span class="span-large">DISCOVERY HELPERS</span>Helping customer's discovery through Mercury Go & it's key functionality, "Discovery Helpers" appear throughout.</p>
             </div>
         </div>
 
