--- a/src/components/mercury-earn_case-study_app_info-left.njk
+++ b/src/components/mercury-earn_case-study_app_info-left.njk
@@ -2,11 +2,11 @@
 
 
     <div class="case-study-grid-set">
-        <h3 class="paragraph-xxl"><span class="span-large">EARN</span>Customers can earn Mercury Dollars & win prizes by using their own human energy to complete a range of different challenges.</h3>
+        <h3 class="paragraph-xxl"><span class="span-large">EARN</span>Customers can earn Mercury Dollars & win prizes by completing a range of different challenges.</h3>
 
         <div class="paragraph-position  positioning-one">
             <div class="sticky-boy">
-                <p class="paragraph-xl"><span class="span-large">STEP CHALLENGES</span>Enter &amp; complete step challenges by using your own human energy.</p>
+                <p class="paragraph-xl"><span class="span-large">STEP CHALLENGES</span>Enter & complete step challenges by using your human energy.</p>
             </div>
         </div>
 
@@ -35,7 +35,7 @@
 
         <div class="paragraph-position positioning-two">
             <div class="sticky-boy">
-                <p class="paragraph-xl"><span class="span-large">STEP COUNTER</span>Watch your steps being counted in real-time as you take on step challenges.</p>
+                <p class="paragraph-xl"><span class="span-large">STEP COUNTER</span>Watch your steps count up in real-time as you take on step challenges.</p>
             </div>
         </div>
 
@@ -64,7 +64,7 @@
 
         <div class="paragraph-position positioning-three">
             <div class="sticky-boy">
-                <p class="paragraph-xl"><span class="span-large">FRIEND GET FRIEND</span>Get your friends in on the fun by joining Mercury through Mercury Go's simple referral mechanic using the devices native share function.</p>
+                <p class="paragraph-xl"><span class="span-large">FRIEND GET FRIEND</span>Get your friends involved using Mercury Go's simple refer-a-friend function that uses the device's native share function.</p>
             </div>
         </div>
 
