--- a/src/components/mercury-spend_case-study_app_info-right.njk
+++ b/src/components/mercury-spend_case-study_app_info-right.njk
@@ -10,7 +10,7 @@
 
         <div class="paragraph-position positioning-one">
             <div class="sticky-boy">
-                <p class="paragraph-xl"><span class="span-large">MERCURY DOLLARS</span>1 Mercury Dollar is equivilent to  1 NZD, or 1 Airpoint.</p>
+                <p class="paragraph-xl"><span class="span-large">MERCURY DOLLARS</span>1 Mercury Dollar is equivalent to 1 NZD, or 1 Airpoints.</p>
             </div>
         </div>
 
@@ -33,7 +33,7 @@
 
         <div class="paragraph-position positioning-two">
             <div class="sticky-boy">
-                <p class="paragraph-xl"><span class="span-large">YOUR DIGITAL LAKE LEVEL</span>Start spending, by dragging the scrubber down, &amp; watch your lake level drop.</p>
+                <p class="paragraph-xl"><span class="span-large">YOUR DIGITAL LAKE</span>Start spending by dragging the scrubber to watch your lake level drop.</p>
             </div>
         </div>
 
