--- a/src/layout/layout.njk
+++ b/src/layout/layout.njk
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html class="no-js">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Bradley Davis — UX Designer</title>
+        <title>Bradley Davis — Digital &amp; UX Designer</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="./scss/styles.scss">
@@ -29,12 +26,10 @@
         <meta name="msapplication-TileImage" content="./images/favicon/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
     </head>
-    <body>
-    <div class="hey-bitch">
 
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-            <![endif]-->
+    <body>
+
+        <div class="hey-bitch">
 
             {% include "../components/navigation.njk" %}
 
@@ -43,5 +38,6 @@
 
             <script src="./js/index.js" async defer></script>
         </div>
+
     </body>
 </html>
