--- a/src/scss/components/_big-text.scss
+++ b/src/scss/components/_big-text.scss
@@ -2,6 +2,7 @@
     grid-column: 2 / 12;
     margin-bottom: 120px;
     z-index: 1;
+    // background: $primary;
 
     @media only screen and (min-width:834px) {
         grid-column: 2 / 24;
