--- a/src/components/mercury-rewards_case-study_app_hero.njk
+++ b/src/components/mercury-rewards_case-study_app_hero.njk
@@ -4,7 +4,7 @@
 
         <div class="text-position">
             <div class="sticky-boy">
-                <h3 class="paragraph-xxl"><span class="span-large">RAISE & SHAKE YOUR LAKE</span>Inspired by Mercury’s close relationship to the Waikato River, any Mercury Dollars you earn is represented by raising your “real physics” digital water level, that’s controlled by your phones gyroscope.</h3>
+                <h3 class="paragraph-xxl"><span class="span-large">RISE & SHAKE YOUR LAKE</span>Inspired by hydro, Mercury's main source of energy generation. Any Mercury Dollars you earn is represented by the rise of your “real physics” digital lake level, controlled by your phone's gyroscope.</h3>
             </div>
         </div>
 
