--- a/src/index.njk
+++ b/src/index.njk
@@ -7,23 +7,26 @@
     <div class="big-text-position">
 
         <h1 class="big-text story">
-
             Hello,</br>
-            The names
-            <span class="show-parts"><span class="trigger">Bradley</span><span class="hide color-change"> <span class="show-parts"><span class="trigger">Hotdog</span><span class="hide color-change"> <span class="show-parts"><span class="trigger">Waffle</span><span class="hide color-change"> Davis</span></span></span></span></span></span>.
-
+            My name's
+            <span class="show-parts"><span class="trigger">Bradley</span><span class="hide color-change"> Davis</span></span>.
         </h1>
 
+        <picture class="image-me">
+            <source srcset="./images/me@1x.jpg 1x, ./images/me@2x.jpg 2x">
+            <img src="./images/me@1x.jpg">
+        </picture>
+
         <h2 class="big-text story">
-            I'm a Wellington, New Zealand based senior<span class="show-parts"> <span class="trigger">digital designer</span><span class="hide">. I bang when I'm collaborating closely with my <span class="show-parts"> <span class="trigger">team</span><span class="hide"> to create the <span class="show-parts"> <span class="trigger">dream</span><span class="hide"> before we put our<span class="show-parts"> <span class="trigger">sticky mits on keys</span><span class="hide"> & cast our spells</span></span></span></span></span></span></span>.
+            I'm a Wellington, New Zealand based senior<span class="show-parts"> <span class="trigger">digital designer</span><span class="hide">. I'm definitely happiest when collaborating closely with my <span class="show-parts"> <span class="trigger">team</span><span class="hide"> to create <span class="show-parts"> <span class="trigger">dreams</span><span class="hide"> for our gorgeous clients</span></span></span></span></span>.
         </h2>
 
         <h2 class="big-text story">
-            Working in design makes my<span class="show-parts"> <span class="trigger">cheeks blush</span><span class="hide">. This means most mornings I'm not dragging my<span class="show-parts"> <span class="hide">cute little </span> <span class="trigger">butt</span> </span>out<span class="show-parts"> <span class="trigger">the sheets</span><span class="hide">. I would be a sad little man if I wasn't interfacing :(
+            Working in design makes me<span class="show-parts"> <span class="trigger">blush</span><span class="hide">. This means I'm not dragging my<span class="show-parts"> <span class="hide">cute little </span> <span class="trigger">butt</span> </span>out of<span class="show-parts"> <span class="trigger">bed each morning</span><span class="hide">. I would be very sad if I wasn't apart of this industry</span></span></span></span>.
         </h2>
 
         <h2 class="big-text story">
-            My current role with Catch Design involves leading design on diverse <span class="show-parts"> <span class="trigger">projects</span><span class="hide"><span class="show-parts"> <span class="trigger"> big & small</span><span class="hide">, creative & corporate</span></span></span></span></span></span>.
+            My current role involves leading design on diverse <span class="show-parts"> <span class="trigger">projects</span><span class="hide"><span class="show-parts"> <span class="trigger"> big & small</span><span class="hide">, creative & corporate</span></span></span></span></span></span>.
         </h2>
 
         <ul>
@@ -37,7 +40,7 @@
         </ul>
 
         <h2 class="big-text story">
-            I try to stay fresh, &amp; be invaluable to my <span class="show-parts"> <span class="trigger">team</span><span class="hide">. It's essential that I learn all the things &amp; grow my <span class="show-parts"> <span class="trigger">expertise</span><span class="hide">, but also gain prowess in <span class="show-parts"> <span class="trigger">overlapping areas</span><span class="hide"> to build <span class="show-parts"> <span class="trigger">bridges</span><span class="hide">, so we can create with an empathetic approach in <span class="show-parts"> <span class="trigger">everything we do</span><span class="hide">. I believe great designers aren't just designers</span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span>.
+            I try to stay fresh, &amp; always valuable to my <span class="show-parts"> <span class="trigger">team</span><span class="hide">. It's essential that I learn all the things, & grow my <span class="show-parts"> <span class="trigger">knowledge</span><span class="hide"> in overlapping areas to build <span class="show-parts"> <span class="trigger">bridges</span><span class="hide">, so we can create with an <span class="show-parts"> <span class="trigger">empathetic approach</span><span class="hide">. I believe great designers aren't just designers</span></span></span></span></span></span></span></span></span></span></span></span></span>.
             {# Design is definitely a little<span class="show-parts"> <span class="trigger">misunderstood</span><span class="hide">, a lot of the time<span class="show-parts"> <span class="trigger">undervalued</span><span class="hide">, always<span class="show-parts"><span class="trigger"> powerful</span><span class="hide"> & inherently<span class="show-parts"> <span class="trigger">magical</span><span class="hide">. There's nothing better than working with<span class="show-parts"> <span class="trigger">clients</span> <span class="hide">such as <a href="https://apps.apple.com/nz/app/mercury-go/id1420855733" target="_blank">Mercury &nearr;</a> & <a href="https://www.iod.org.nz/#" target="_blank">IoD &nearr;</a></span> </span>who have a shared vision & emphasis for<span class="show-parts"> <span class="trigger"> design</span><span class="hide"> to help deliver business & customer value</span></span></span></span></span></span></span></span></span></span>. #}
         </h2>
 
@@ -58,17 +61,20 @@
             <li class="list-title">RECENT CLIENTS</li>
             <li>Mercury</li>
             <li>2degrees</li>
-            <li>NZ Olympic Committee</li>
             <li>Institute of Directors, New Zealand</li>
+            <li>NZ Olympic Committee</li>
+            <li>Workshop e</li>
+            <!-- <li>Toi-Ohomai - Institute of Technology</li> -->
             <!-- <li>Life Education Trust</li> -->
             <!-- <li>ACG schools</li> -->
             <!-- <li>Digital NZ</li> -->
             <!-- <li>Natlib</li> -->
             <!-- <li>Farm Source</li> -->
-            <li>Workshop e</li>
         </ul>
     </div>
 </div>
+
+<img class="bg-animation" src="images/bg-animation-2.svg" alt="Saucing the dog">
 
 
 {% endblock %}
