--- a/src/iod.njk
+++ b/src/iod.njk
@@ -46,7 +46,7 @@
 
     <div class="big-text-position last-page-component">
         <p class="big-text position-three">
-            We continue to plan and deliver a prioritised, outcome focused roadmap of continuous improvements, within 2 week sprint cycles.
+            We continue to plan, prioritise & deliver an outcome focused roadmap improvements.
         </p>
     </div>
 
