--- a/src/mercury-go.njk
+++ b/src/mercury-go.njk
@@ -10,7 +10,7 @@
     <div class="breakdown-wrap" data-scroll-speed="-2">
         <div class="breakdown-grid-set">
             <p class="breakdown-component paragraph-large"><span class="span-large">CLIENT</span>Mercury</p>
-            <p class="breakdown-component paragraph-large"><span class="span-large">PLATFORM</span>Native iOS & Android app</p>
+            <p class="breakdown-component paragraph-large"><span class="span-large">PLATFORM</span>Native iOS & Android</p>
             <p class="breakdown-component paragraph-large"><span class="span-large">MY ROLE</span>Lead UX/UI Designer</p>
             <p class="breakdown-component paragraph-large"><span class="span-large">MVP DEVLIVERY</span>May 2017 - Jun 2018</p>
         </div>
@@ -25,8 +25,8 @@
 
     <div class="big-text-position">
         <h2 class="big-text">
-            Creating a positive brand worth <span class="show-parts"> <span class="trigger">talking about</span><span class="hide">. We delivered Mercury an app that <span class="show-parts"> <span class="trigger">stands out</span><span class="hide">. We focused on inspiring customers about energy &amp; offering them something <span class="show-parts"> <span class="trigger">purposeful & beneficial</span><span class="hide">, that they can proudly get <span class="show-parts"> <span class="trigger">behind</span><span class="hide"> rather than a typical utility focused app like all the other power companies</span></span></span></span></span></span></span></span>.
-            {# Creating a positive brand worth talking about. We delivered Mercury an app that stands out. We focused on inspiring customers about energy &amp; offering them something purposeful & beneficial, that they can proudly get behind rather than a typical utility focused app like all the other power companies. #}
+            Pushing for positivity, we delivered Mercury an app that <span class="show-parts"> <span class="trigger">stands out</span><span class="hide">. Our goal was to inspire customers about energy by offering something <span class="show-parts"> <span class="trigger">meaningful & beneficial</span><span class="hide"> that they can proudly get <span class="show-parts"> <span class="trigger">behind</span><span class="hide">, instead of the standard utility-focused app</span></span></span></span></span></span>.
+            {# Creating a positive brand worth talking about. We delivered Mercury an app that <span class="show-parts"> <span class="trigger">stands out</span><span class="hide">. We focused on inspiring customers about energy by offering something <span class="show-parts"> <span class="trigger">meaningful & beneficial</span><span class="hide"> that they can proudly get <span class="show-parts"> <span class="trigger">behind</span><span class="hide">, instead of a standard utility focused app.</span></span></span></span></span></span>. #}
         </h2>
     </div>
 
@@ -47,7 +47,7 @@
 
     <div class="big-text-position last-page-component">
         <p class="big-text position-two">
-            We continue to plan &amp; deliver a prioritised, outcome focused roadmap of continuous improvements, within 2 week sprint cycles.
+            We continue to plan, prioritise & deliver an outcome focused roadmap improvements, within 2 week sprints.
         </p>
     </div>
 
