--- a/src/scss/components/_story.scss
+++ b/src/scss/components/_story.scss
@@ -12,13 +12,13 @@
         margin-top: 120px;
         margin-bottom: 90px;
         @media only screen and (min-width:834px) {
-            margin-top: 50vh;
+            margin-top: 30vmin;
             margin-bottom: 150px;
         }
         &.story  {
             font-size: 14vw;
             @media only screen and (min-width:834px) {
-                font-size: 8vw;
+                font-size: 9.4vw;
             }
         }
     }
@@ -30,4 +30,17 @@
             margin-bottom: 120px;
         }
     }
+
+    .image-me {
+        margin-bottom: 90px;
+        @media only screen and (min-width:834px) {
+            margin-bottom: 150px;
+        }
+        display: block;
+        max-width: 1200px;
+        img {
+            max-width: 100%;
+        }
+    }
+
 }
