--- a/src/scss/modules/_animation.scss
+++ b/src/scss/modules/_animation.scss
@@ -16,3 +16,15 @@
                 -webkit-transform: rotate(359deg);
         }
 }
+
+@keyframes shake {
+        0% {
+                -webkit-transform: rotate(0deg);
+        }
+        50% {
+                -webkit-transform: rotate(3deg);
+        }
+        100% {
+                -webkit-transform: rotate(0deg);
+        }
+}
