--- a/src/scss/no-components/_layout.scss
+++ b/src/scss/no-components/_layout.scss
@@ -8,12 +8,8 @@
         box-shadow: 0px 0px 90px 90px;
         grid-template-columns: repeat(24, 1fr);
         grid-gap: 0 21px;
+        &.homepage {
+            background: none;
+        }
     }
 }
-
-// .nav-push {
-//     margin-top: 390px;
-//         @media only screen and (min-width:834px) {
-
-//     }
-// }
