BG animation and text updates

--- a/src/components/mercury-rewards_case-study_app_hero.njk
+++ b/src/components/mercury-rewards_case-study_app_hero.njk
@@ -4,7 +4,7 @@
 
         <div class="text-position">
             <div class="sticky-boy">
-                <h3 class="paragraph-xxl"><span class="span-large">RISE & SHAKE YOUR LAKE</span>Inspired by hydro, Mercury's main source of energy generation. Any Mercury Dollars you earn is represented by the rise of your “real physics” digital lake level, controlled by your phone's gyroscope.</h3>
+                <h3 class="paragraph-xxl"><span class="span-large">RISE & SHAKE YOUR LAKE</span>Inspired by Hydro, Mercury's main source of power generation, any Mercury Dollars you earn are represented by raising of your “real physics” digital lake level, controlled by your phone's gyroscope.</h3>
             </div>
         </div>
 
