--- a/src/mercury-go.njk
+++ b/src/mercury-go.njk
@@ -47,7 +47,7 @@
 
     <div class="big-text-position last-page-component">
         <p class="big-text position-two">
-            We continue to plan, prioritise & deliver an outcome focused roadmap improvements, within 2 week sprints.
+            We continue to plan, prioritise & deliver outcome focused improvements, within 2 week sprints.
         </p>
     </div>
 
