--- a/src/iod.njk
+++ b/src/iod.njk
@@ -46,7 +46,7 @@
 
     <div class="big-text-position last-page-component">
         <p class="big-text position-three">
-            We continue to plan, prioritise & deliver an outcome focused roadmap improvements.
+            We continue to plan, prioritise & deliver outcome focused improvements.
         </p>
     </div>
 
